Add system and server configuration options
Adds new configuration options to `config.toml`:

- Introduces a `[system]` section with `python_interpreter` to allow specifying the Python executable path.
- Splits the previous `host` setting in `[server]` into separate `host` and `port` settings for clarity.
- Adds a `debug` flag to the `[server]` section to control Flask's debug mode via configuration.

--- a/server/config.toml
+++ b/server/config.toml
@@ -1,3 +1,6 @@
+[system]
+python_interpreter = "python3"
+
 [database]
 # Define your connection parameters
 server = "192.168.2.50:1433\\wiffzack"
@@ -6,9 +9,10 @@ username = "wiffzack"
 password = "wiffzack"
 
 [server]
-host = "localhost:5000"
+host = "localhost"
+port = 5000
+debug = false
 init_stock_directory = "assets/init/"
-
 
 
 [terminal_config]
