Implement drag-to-scroll using dragscroll library
Introduces horizontal drag-to-scroll capability for the data table component.
This is neccessary for touch devices not recognized by Windows and
therefore no touch scrolling is available in Chrome. On Linux one can
supply the `--touch-devices=X` command line parameter to force touch
scrolling for a specific input device (you get X from xinput list) but I
haven't found an equivalent on Windows

- Added 'dragscroll' as a development dependency.
- Imported 'dragscroll' into DataTable.vue.
- Used the `onUpdated` lifecycle hook to apply the 'dragscroll' class to the body and reset the library, ensuring functionality persists across data updates.

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "dragscroll": "^0.0.8",
     "sass": "^1.86.0",
     "sass-loader": "^16.0.5",
     "vite": "^6.2.1",
