refactor: Standardize print template example and update .gitignore
This commit renames the existing `invoice.html` to `example.html`
to serve as a standard, version-controlled example for print templates.

Additionally, the .gitignore file has been updated to:
- Ignore all files within the `server/print_templates/` directory by default.
- Explicitly un-ignore (track) `server/print_templates/example.html`.

This change allows users to easily create and manage their own custom
print templates in the `server/print_templates/` directory without
them being unintentionally tracked by Git, while ensuring the example
template remains part of the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ server/spool
 server/assets/messages/*
 !server/assets/messages/README.md
 client/public/config.json
+server/print_templates/*
+!server/print_templates/example.html
