--- a/server/logging.conf
+++ b/server/logging.conf
@@ -4,20 +4,30 @@
 keys=root
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler,fileHandler
 
 [formatters]
 keys=simpleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler,fileHandler
 
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
 formatter=simpleFormatter
 args=(sys.stderr,)
+
+[handler_fileHandler]
+#class=FileHandler
+level=DEBUG
+formatter=simpleFormatter
+#args=('print_service.log', 'a') # 'a' for append mode
+# Use 'w' for write mode (overwrites file on each run)
+# For rotating logs, you might use:
+class=logging.handlers.RotatingFileHandler
+args=('logs/server.log', 'a', 10485760, 5) # 10MB per file, 5 backup files
 
 [formatter_simpleFormatter]
 format=%(asctime)s %(levelname)s - %(filename)s:%(lineno)d %(funcName)s: %(message)s
