feat: Implement server restart request via menu button and flag file
This commit introduces a mechanism to request a server restart from the
`menu_button` application. When triggered, the server creates a flag
file, which an external watchdog process can monitor to perform the
actual restart.

Key changes:

- **`menu_button/config.default.toml`**:
  - Added a `debug = false` option to control the visibility of
    debug-related menu items.

- **`menu_button/menu_button.py`**:
  - Added a "Restart server process" option to a new "Debug" menu,
    which is visible when `config["client"]["debug"]` is true.
  - Implemented `request_server_process_restart()`:
    - Displays a Tkinter `messagebox.askyesno` for confirmation.
    - If confirmed, sends a GET request to the new `/api/restart`
      endpoint on the server using `urllib.request`.
    - Shows `showinfo` or `showerror` dialogs based on the
      server's response or connection errors.
  - Added `request_restart: "/api/restart"` to `FRONTEND_URLS`.

- **`server/server.py`**:
  - Added a new GET endpoint `/api/restart`.
  - When this endpoint is called, it creates (or touches) a flag
    file named `./.restart` in the server's working directory.
  - This flag file serves as a signal for an external watchdog
    process to initiate the server restart.
  - Logs the creation of the flag file and handles potential errors.

--- a/menu_button/config.default.toml
+++ b/menu_button/config.default.toml
@@ -2,3 +2,4 @@
 name = "CLIENTNAME"
 web_server = "localhost:5000"
 browser_cmd = "chromium --kiosk  --noerrdialogs --disable-infobars --enable-features=OverlayScrollbar"
+debug = false
