feat: Implement alarm triggering system
This commit introduces a new feature allowing users to trigger an external alarm system.

Key changes include:

- **Frontend (Vue.js):**
    - Added `AlarmDialog.vue` component to handle the alarm triggering UI flow.
    - Integrated a modal dialog for user confirmation and feedback (success/error).
    - Added new i18n translations for alarm-related messages.
    - Added a new route `/alarm` for the `AlarmDialog`.
    - The dialog retrieves the `terminal` ID from the URL query parameters.

- **Backend (Flask - server.py):**
    - Created a new API endpoint `/api/alarm/trigger/<location>` to receive alarm requests.
    - The endpoint reads an alarm URL template from `config.toml`, formats it with the provided location, and makes a GET request to the external alarm system.
    - Includes error handling for configuration issues, network errors, and non-200 responses from the alarm system.
    - Added logging for alarm trigger attempts and outcomes.

- **Configuration (server/config.toml):**
    - Added a new `[alarm]` section with a `url` key to specify the external alarm system's endpoint. This URL can contain a `{location}` placeholder.

- **Menu Button (menu_button.py):**
    - Added an "Alarm" option to the menu.
    - This option opens a new browser window/tab pointing to the frontend alarm dialog URL, passing the client name as a `terminal` query parameter.

This feature enhances the system's capability by allowing quick remote activation of an alarm based on the terminal's location.

--- a/server/config.toml
+++ b/server/config.toml
@@ -14,6 +14,9 @@ port = 5000
 debug = false
 init_stock_directory = "assets/init/"
 
+[alarm]
+url = "http://192.168.202.1/alarm_trigger.php?location={location}"
+
 
 [terminal_config]
 
