--- a/server/logging.conf
+++ b/server/logging.conf
@@ -1,13 +1,13 @@
 # Logging configuration
 
 [loggers]
-keys=root
+keys=root,storage_transfer
 
 [handlers]
-keys=consoleHandler,fileHandler
+keys=consoleHandler,fileHandler,storageTransferHandler
 
 [formatters]
-keys=simpleFormatter
+keys=simpleFormatter,storageTransferFormatter
 
 [logger_root]
 level=DEBUG
@@ -19,6 +19,12 @@ level=DEBUG
 formatter=simpleFormatter
 args=(sys.stderr,)
 
+[logger_storage_transfer]
+level=INFO
+handlers=storageTransferHandler
+qualname=storage_transfer
+propagate=0
+
 [handler_fileHandler]
 #class=FileHandler
 level=DEBUG
@@ -29,5 +35,15 @@ formatter=simpleFormatter
 class=logging.handlers.RotatingFileHandler
 args=('logs/server.log', 'a', 10485760, 5) # 10MB per file, 5 backup files
 
+[handler_storageTransferHandler]
+class=logging.handlers.RotatingFileHandler
+level=INFO
+formatter=storageTransferFormatter
+args=('logs/storage_transfers.log', 'a', 1048576, 5) # 1MB per file, 5 backups
+
 [formatter_simpleFormatter]
 format=%(asctime)s %(levelname)s - %(filename)s:%(lineno)d %(funcName)s: %(message)s
+
+[formatter_storageTransferFormatter]
+format=%(asctime)s|%(message)s
+datefmt=%Y-%m-%dT%H:%M:%S
