feat(checklist): Add expiry for latest checklist
Implements an expiry mechanism for retrieving the latest active checklist. A checklist is now only considered "latest" if it was created within a configurable time frame, preventing old, incomplete checklists from being reused.

- Adds a new `[checklist]` section to `config.toml` with an `expiry_mins` setting to control the expiration time.
- Modifies `get_latest_checklist` in `lib/checklist.py` to accept an `expiry` parameter and updates the SQL query to filter out checklists created before the expiry window.
- Updates the `/api/checklist/latest/{master_id}` endpoint in `server.py` to pass the configured expiry time to the data access layer.
- Adjusts unit tests in `test_server.py` to reflect the new signature of the mocked `get_latest_checklist` function.

--- a/server/config.toml
+++ b/server/config.toml
@@ -18,6 +18,11 @@ init_stock_directory = "assets/init/"
 url = "http://192.168.202.1/alarm_trigger.php?location={location}"
 
 
+[checklist]
+# a new checklist expires after that amount of minutes
+expiry_mins = 30
+
+
 [terminal_config]
 
 [terminal_config.lager]
